<resources>
    <string name="app_name">workout Log</string>
    <string name="sign_up">Don\'t have an account?<u>Sign up</u></string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="first_name">First Name</string>
    <string name="enter_email">Enter email</string>
    <string name="Enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="last_name">Last Name</string>
    <string name="profile">profile</string>
    <string name="track">track</string>
    <string name="plan">plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_fragment">PLAN FRAGMENT</string>
    <string name="phone_number">phone number</string>
</resources>